--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "This is the github page of a simplistic to do app.",
     "main": "main.js",
     "scripts": {
-        "start": "electron ."
+        "start": "electron main.js"
     },
     "repository": {
         "type": "git",
